Estoy seguro de este COMMIT 2

--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
         <h1 class="borde">Hola Mundo</h1>
     </div>
 
-    <div class="contenedor">
-        <h1 class="borde">Adiós Mundo</h1>
+    <div>
+        <h2 class="borde">Adiós Mundo</h2>
+    </div>
+
+    <div>
+        <h3 class="borde">Hola de nuevo Mundo</h3>
     </div>
 
 </body>
