--- a/index.html
+++ b/index.html
@@ -19,5 +19,9 @@
         <h3 class="borde">Hola de nuevo Mundo</h3>
     </div>
 
+    <div>
+        <h4 class="borde">Adios de nuevo Mundo</h4>
+    </div>
+
 </body>
 </html>
